--- a/html/videoPract.html
+++ b/html/videoPract.html
@@ -11,3 +11,28 @@
 <!-- <video> = your file, your rules
 
 <iframe> = someone else’s site inside yours -->
+
+<!-- PRELOAD ATTRIBUTE
+none → load on click
+
+metadata → best default
+
+auto → heavy, avoid -->
+
+<svg width="120" height="120" viewBox="0 0 120 120">
+  <circle cx="60" cy="60" r="50" fill="blue" />
+</svg>
+
+<svg width="100" height="100">
+  <circle cx="50" cy="50" r="40">
+    <animate
+      attributeName="r"
+      from="10"
+      to="40"
+      dur="1s"
+      repeatCount="indefinite" />
+  </circle>
+</svg>
+<!-- SVG = Scalable Vector Graphics
+
+Scalable → size badhao, quality same -->
