--- a/html/iframePractice.html
+++ b/html/iframePractice.html
@@ -7,4 +7,6 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
+
+<!-- when you want to play any YouTube video then click share and click embed icon and copy the link  -->
 <!-- “HTML <video> supports only direct media files. For YouTube or external platforms, <iframe> embed must be used. To avoid CLS and improve Core Web Vitals, width, height, preload, and poster attributes should be defined.” -->
