--- a/spotifyClone/index.html
+++ b/spotifyClone/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Alright i have to complete this by today -->
 <head>
     <!-- hugeicons website for icons -->
     <meta charset="UTF-8">
