--- a/js/promise.html
+++ b/js/promise.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="whyPromise.js"></script>
+    <script src="Hacking.js"></script>
     <!-- to properly understand promises see the whyPromise.js  -->
 </body>
 </html>
